<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:elevation="90dp"
    android:orientation="vertical"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vtc_icon_edit" />

        <TextView
            android:id="@+id/recipientTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/card_recipient" />

        <TextView
            android:id="@+id/dateTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/recipientTextCard"
            android:layout_below="@+id/recipientTextCard"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/card_date" />

        <TextView
            android:id="@+id/titleTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/recipientTextCard"
            android:text="@string/card_title"
            android:textSize="20sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
